--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.14.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -37,6 +38,6 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "prisma": "^5.1.1"
   }
 }
