--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
