--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@stripe/stripe-js": "^2.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -35,6 +36,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "stripe": "^13.0.0",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
