--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.8.0",
     "stripe": "^13.0.0",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
