--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "eslint": "8.46.0",
@@ -32,7 +32,7 @@
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.16.3",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -41,7 +41,7 @@
     "recharts": "^2.8.0",
     "stripe": "^13.0.0",
     "swr": "^2.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   },
