--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "form-data": "^4.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mailgun.js": "^9.4.0",
     "next": "13.4.12",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^4.16.3",
